--- a/webapp/src/app/home/home.component.html
+++ b/webapp/src/app/home/home.component.html
@@ -1,7 +1,1 @@
-<mat-toolbar color="primary">
-  <h1>
-    My Angular Store
-  </h1>
-  <button mat-button routerLink="/">Home</button>
-  <button mat-button routerLink="/about">About</button>
-</mat-toolbar>
+<a mat-raised-button color="primary"> Faire un pari </a>
