--- a/webapp/src/app/app.component.scss
+++ b/webapp/src/app/app.component.scss
@@ -1,8 +1,8 @@
 .container {
-  padding: 10vh 10vw 0;
-  height: 88vh;
+  padding: 20px 10vw 0;
+  min-height: 88vh;
   display: flex;
-  align-items: center;
+  align-items: start;
   justify-content: center;
 }
 
