--- a/webapp/src/app/leagues/leagues.component.scss
+++ b/webapp/src/app/leagues/leagues.component.scss
@@ -9,6 +9,7 @@
 .example-list {
   border: solid 1px #ccc;
   min-height: 60px;
+  max-height: 600px;
   background: white;
   border-radius: 4px;
   overflow: hidden;
@@ -21,6 +22,17 @@
 
 .medium-flag {
   max-height: 20px;
+}
+
+.margin-20 {
+  margin: 20px;
+}
+
+.main-container {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-start;
 }
 
 .example-box {
