Fixtures + Make Bet

--- a/webapp/src/app/app.component.html
+++ b/webapp/src/app/app.component.html
@@ -10,7 +10,7 @@
   <mat-sidenav #sidenav>
     <mat-nav-list>
       <a mat-list-item [routerLink]="'/leagues'"> Mes Ligues </a>
-      <a mat-list-item [routerLink]="'/bets'"> Mes Paris </a>
+      <a mat-list-item [routerLink]="'/new-bet'"> Faire un pari </a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
