--- a/webapp/src/app/bet-grids/bet-grids.component.html
+++ b/webapp/src/app/bet-grids/bet-grids.component.html
@@ -1,1 +1,109 @@
-<p>bet-grids works!</p>
+<div class="main-container">
+  <div class="secondary-container">
+    <div class="bet-container">
+      <h2>Mon Combiné</h2>
+
+      <div class="bet-list"
+           cdkDropList
+           [cdkDropListData]="grids.combinedBetResult.bet.entries"
+           (cdkDropListDropped)="drop($event)">
+        <div class="bet-box"
+             cdkDrag cdkDragBoundary=".bet-list"
+             *ngFor="let item of grids.combinedBetResult.bet.entries">
+          <div class="bet-title">
+            <span>{{computeFixtureName(item.fixture)}}</span>
+            <span>{{computeFixtureDate(item.fixture)}}</span>
+          </div>
+          <div class="bet-outcome">
+            <mat-form-field>
+              <div class="checkbox">
+                <mat-checkbox [(ngModel)]="item.outcomes[0].selected">1</mat-checkbox>
+              </div>
+              <input matInput appNumeric decimals="2" [(ngModel)]="item.outcomes[0].odds"
+                     type="number" max="99.99" step="0.01">
+            </mat-form-field>
+            <mat-form-field>
+              <div class="checkbox">
+                <mat-checkbox [(ngModel)]="item.outcomes[1].selected">N</mat-checkbox>
+              </div>
+              <input matInput appNumeric decimals="2" [(ngModel)]="item.outcomes[1].odds"
+                     type="number" max="99.99" step="0.01">
+            </mat-form-field>
+            <mat-form-field>
+              <div class="checkbox">
+                <mat-checkbox [(ngModel)]="item.outcomes[2].selected">2</mat-checkbox>
+              </div>
+              <input matInput appNumeric decimals="2" [(ngModel)]="item.outcomes[2].odds"
+                     type="number" max="99.99" step="0.01">
+            </mat-form-field>
+          </div>
+        </div>
+      </div>
+
+      <div class="bet-action">
+        <div>
+          <mat-form-field appearance="fill">
+            <mat-label>Mise</mat-label>
+            <input matInput appNumeric decimals="2"
+                   [(ngModel)]="grids.combinedBetResult.bet.betMoney"
+                   type="text" class="example-right-align">
+            <span matSuffix>€</span>
+          </mat-form-field>
+        </div>
+        <div>
+          <button mat-flat-button color="accent" (click)="updateBetAndGenerateGrid()">Recalculer</button>
+        </div>
+      </div>
+    </div>
+    <div class="grid-container">
+      <h2>Grille {{pageIndex + 1}}</h2>
+
+      <mat-card class="example-card">
+        <mat-card-header>
+          <mat-card-title>
+            <mat-chip-list>
+              <mat-chip>A miser : {{displayDouble(currentGrid.equitableMoneyBet)}}€</mat-chip>
+            </mat-chip-list>
+          </mat-card-title>
+        </mat-card-header>
+        <mat-card-content>
+          <table mat-table [dataSource]="currentGrid.entries" class="mat-elevation-z8">
+
+            <!-- Position Column -->
+            <ng-container matColumnDef="fixture">
+              <th mat-header-cell *matHeaderCellDef> Match</th>
+              <td mat-cell *matCellDef="let gridLine"> {{findFixtureName(gridLine.fixtureId)}} </td>
+            </ng-container>
+
+            <!-- Name Column -->
+            <ng-container matColumnDef="outcome">
+              <th mat-header-cell *matHeaderCellDef> Résultat</th>
+              <td mat-cell *matCellDef="let gridLine"> {{computeOutcomeName(gridLine.outcome)}} </td>
+            </ng-container>
+
+            <!-- Weight Column -->
+            <ng-container matColumnDef="odds">
+              <th mat-header-cell *matHeaderCellDef> Côte</th>
+              <td mat-cell *matCellDef="let gridLine"> {{displayDouble(gridLine.odds)}} </td>
+            </ng-container>
+
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+          </table>
+        </mat-card-content>
+        <mat-card-actions>
+          <mat-chip-list>
+            <mat-chip>Gains: {{displayDouble(currentGrid.equitableGain)}}€</mat-chip>
+            <mat-chip>Côtes cumulées: {{displayDouble(currentGrid.combinedOdds)}}</mat-chip>
+          </mat-chip-list>
+        </mat-card-actions>
+      </mat-card>
+      <mat-paginator [length]="grids.combinedBetResult.playableGrids.length"
+                     [pageSize]="1"
+                     (page)="switchGrid($event)">
+      </mat-paginator>
+    </div>
+  </div>
+</div>
+
+
