--- a/webapp/src/app/bet-grids/bet-grids.component.html
+++ b/webapp/src/app/bet-grids/bet-grids.component.html
@@ -53,6 +53,9 @@
         <div>
           <button mat-flat-button color="accent" (click)="updateBetAndGenerateGrid()">Recalculer</button>
         </div>
+        <div>
+          <button mat-flat-button color="primary" (click)="returnToFixtures()">Retour aux matchs</button>
+        </div>
       </div>
     </div>
     <div class="grid-container">
