--- a/webapp/src/app/home/home.component.html
+++ b/webapp/src/app/home/home.component.html
@@ -1,1 +1,1 @@
-<a mat-raised-button color="primary"> Faire un pari </a>
+<a mat-raised-button color="primary" [routerLink]="'/new-bet'"> Faire un pari </a>
