--- a/webapp/src/app/views/bet-grids/bet-grids.component.html
+++ b/webapp/src/app/views/bet-grids/bet-grids.component.html
@@ -10,8 +10,8 @@
         <div class="bet-box"
              cdkDrag cdkDragBoundary=".bet-list"
              *ngFor="let item of grids.combinedBetResult.bet.entries">
-          <div>
-            <mat-slide-toggle [(ngModel)]="item.active"></mat-slide-toggle>
+          <div class="bet-active">
+            <mat-slide-toggle [(ngModel)]="item.active" color="primary"></mat-slide-toggle>
           </div>
           <div class="bet-title">
             <span>{{computeFixtureName(item.fixture)}}</span>
@@ -63,52 +63,54 @@
     </div>
     <div class="grid-container">
       <mat-slide-toggle [(ngModel)]="homogenousGains">Gains homogènes</mat-slide-toggle>
-      <h2>Grille {{pageIndex + 1}}</h2>
-
       <mat-card class="example-card">
         <mat-card-header>
           <mat-card-title>
-            <mat-chip-list>
-              <mat-chip>A miser : {{getBetMoney(currentGrid)}}€</mat-chip>
-            </mat-chip-list>
+            Grille {{pageIndex + 1}}
           </mat-card-title>
         </mat-card-header>
         <mat-card-content>
-          <table mat-table [dataSource]="currentGrid.entries" class="mat-elevation-z8">
+          <div id="grid">
+            <table mat-table [dataSource]="currentGrid.entries" class="mat-elevation-z8">
 
-            <!-- Position Column -->
-            <ng-container matColumnDef="fixture">
-              <th mat-header-cell *matHeaderCellDef> Match</th>
-              <td mat-cell *matCellDef="let gridLine"> {{findFixtureName(gridLine.fixtureId)}} </td>
-            </ng-container>
+              <!-- Position Column -->
+              <ng-container matColumnDef="fixture">
+                <th mat-header-cell *matHeaderCellDef> Match</th>
+                <td mat-cell *matCellDef="let gridLine"> {{findFixtureName(gridLine.fixtureId)}} </td>
+              </ng-container>
 
-            <!-- Name Column -->
-            <ng-container matColumnDef="outcome">
-              <th mat-header-cell *matHeaderCellDef> Résultat</th>
-              <td mat-cell *matCellDef="let gridLine"> {{computeOutcomeName(gridLine.outcome)}} </td>
-            </ng-container>
+              <!-- Name Column -->
+              <ng-container matColumnDef="outcome">
+                <th mat-header-cell *matHeaderCellDef> Résultat</th>
+                <td mat-cell *matCellDef="let gridLine"> {{computeOutcomeName(gridLine.outcome)}} </td>
+              </ng-container>
 
-            <!-- Weight Column -->
-            <ng-container matColumnDef="odds">
-              <th mat-header-cell *matHeaderCellDef> Côte</th>
-              <td mat-cell *matCellDef="let gridLine"> {{displayDouble(gridLine.odds)}} </td>
-            </ng-container>
+              <!-- Weight Column -->
+              <ng-container matColumnDef="odds">
+                <th mat-header-cell *matHeaderCellDef> Côte</th>
+                <td mat-cell *matCellDef="let gridLine"> {{displayDouble(gridLine.odds)}} </td>
+              </ng-container>
 
-            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-          </table>
+              <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+              <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+            </table>
+          </div>
+          <div id="overview">
+            <mat-chip-list>
+              <mat-chip>A miser : {{getBetOverview(currentGrid).moneyBet}}€</mat-chip>
+              <mat-chip>Gains: {{getBetOverview(currentGrid).totalGain}}€</mat-chip>
+              <mat-chip>Côtes cumulées: {{getBetOverview(currentGrid).combinedOdds}}</mat-chip>
+            </mat-chip-list>
+          </div>
         </mat-card-content>
         <mat-card-actions>
-          <mat-chip-list>
-            <mat-chip>Gains: {{getBetGain(currentGrid)}}€</mat-chip>
-            <mat-chip>Côtes cumulées: {{displayDouble(currentGrid.combinedOdds)}}</mat-chip>
-          </mat-chip-list>
+          <mat-paginator [length]="grids.combinedBetResult.playableGrids.length"
+                         [pageSize]="1"
+                         (page)="switchGrid($event)">
+          </mat-paginator>
         </mat-card-actions>
       </mat-card>
-      <mat-paginator [length]="grids.combinedBetResult.playableGrids.length"
-                     [pageSize]="1"
-                     (page)="switchGrid($event)">
-      </mat-paginator>
+
     </div>
   </div>
 </div>
