--- a/webapp/src/app/views/new-bet/new-bet.component.scss
+++ b/webapp/src/app/views/new-bet/new-bet.component.scss
@@ -16,7 +16,7 @@
 }
 
 .bet-container {
-  width: 500px;
+  width: 600px;
   max-width: 100%;
   margin: 20px;
   display: inline-block;
@@ -30,6 +30,10 @@
   border-radius: 4px;
   overflow: hidden;
   display: block;
+}
+
+.bet-active {
+  margin-right: 1.5rem
 }
 
 .bet-title {
