--- a/webapp/src/app/views/bet-grids/bet-grids.component.html
+++ b/webapp/src/app/views/bet-grids/bet-grids.component.html
@@ -1,117 +1,136 @@
 <div class="main-container">
   <div class="secondary-container">
-    <div class="bet-container">
-      <h2>Mon Combiné</h2>
+      <div class="bet-container">
+        <h2>Mon Combiné</h2>
 
-      <div class="bet-list"
-           cdkDropList
-           [cdkDropListData]="grids.combinedBetResult.bet.entries"
-           (cdkDropListDropped)="drop($event)">
-        <div class="bet-box"
-             cdkDrag cdkDragBoundary=".bet-list"
-             *ngFor="let item of grids.combinedBetResult.bet.entries">
-          <div class="bet-active">
-            <mat-slide-toggle [(ngModel)]="item.active" color="primary"></mat-slide-toggle>
+        <div class="bet-list"
+             cdkDropList
+             [cdkDropListData]="grids.combinedBetResult.bet.entries"
+             (cdkDropListDropped)="drop($event)">
+          <div class="bet-box"
+               cdkDrag cdkDragBoundary=".bet-list"
+               *ngFor="let item of grids.combinedBetResult.bet.entries">
+            <div class="bet-active">
+              <mat-slide-toggle [(ngModel)]="item.active" color="primary"></mat-slide-toggle>
+            </div>
+            <div class="bet-title">
+              <span>{{computeFixtureName(item.fixture)}}</span>
+              <span>{{computeFixtureDate(item.fixture)}}</span>
+            </div>
+            <div class="bet-outcome">
+              <mat-form-field>
+                <div class="checkbox">
+                  <mat-checkbox [(ngModel)]="item.outcomes[0].selected">1</mat-checkbox>
+                </div>
+                <input matInput appNumeric decimals="2" [(ngModel)]="item.outcomes[0].odds"
+                       type="number" max="99.99" step="0.01">
+              </mat-form-field>
+              <mat-form-field>
+                <div class="checkbox">
+                  <mat-checkbox [(ngModel)]="item.outcomes[1].selected">N</mat-checkbox>
+                </div>
+                <input matInput appNumeric decimals="2" [(ngModel)]="item.outcomes[1].odds"
+                       type="number" max="99.99" step="0.01">
+              </mat-form-field>
+              <mat-form-field>
+                <div class="checkbox">
+                  <mat-checkbox [(ngModel)]="item.outcomes[2].selected">2</mat-checkbox>
+                </div>
+                <input matInput appNumeric decimals="2" [(ngModel)]="item.outcomes[2].odds"
+                       type="number" max="99.99" step="0.01">
+              </mat-form-field>
+            </div>
           </div>
-          <div class="bet-title">
-            <span>{{computeFixtureName(item.fixture)}}</span>
-            <span>{{computeFixtureDate(item.fixture)}}</span>
+        </div>
+
+        <div class="bet-action">
+          <div>
+            <mat-form-field appearance="fill">
+              <mat-label>Mise</mat-label>
+              <input matInput appNumeric decimals="2"
+                     [(ngModel)]="grids.combinedBetResult.bet.betMoney"
+                     type="text" class="example-right-align">
+              <span matSuffix>€</span>
+            </mat-form-field>
           </div>
-          <div class="bet-outcome">
-            <mat-form-field>
-              <div class="checkbox">
-                <mat-checkbox [(ngModel)]="item.outcomes[0].selected">1</mat-checkbox>
-              </div>
-              <input matInput appNumeric decimals="2" [(ngModel)]="item.outcomes[0].odds"
-                     type="number" max="99.99" step="0.01">
-            </mat-form-field>
-            <mat-form-field>
-              <div class="checkbox">
-                <mat-checkbox [(ngModel)]="item.outcomes[1].selected">N</mat-checkbox>
-              </div>
-              <input matInput appNumeric decimals="2" [(ngModel)]="item.outcomes[1].odds"
-                     type="number" max="99.99" step="0.01">
-            </mat-form-field>
-            <mat-form-field>
-              <div class="checkbox">
-                <mat-checkbox [(ngModel)]="item.outcomes[2].selected">2</mat-checkbox>
-              </div>
-              <input matInput appNumeric decimals="2" [(ngModel)]="item.outcomes[2].odds"
-                     type="number" max="99.99" step="0.01">
-            </mat-form-field>
+          <div>
+            <button mat-flat-button color="accent" (click)="updateBetAndGenerateGrid()">Recalculer</button>
+          </div>
+          <div>
+            <button mat-flat-button color="primary" (click)="returnToFixtures()">Retour aux matchs</button>
           </div>
         </div>
       </div>
+      <div class="grid-container">
+        <mat-slide-toggle [(ngModel)]="homogenousGains">Gains homogènes</mat-slide-toggle>
+        <mat-card class="example-card">
+          <mat-card-header>
+            <mat-card-title>
+              Grille {{pageIndex + 1}}
+            </mat-card-title>
+          </mat-card-header>
+          <mat-card-content>
+            <div id="grid">
+              <table mat-table [dataSource]="currentGrid.entries" class="mat-elevation-z8">
 
-      <div class="bet-action">
-        <div>
-          <mat-form-field appearance="fill">
-            <mat-label>Mise</mat-label>
-            <input matInput appNumeric decimals="2"
-                   [(ngModel)]="grids.combinedBetResult.bet.betMoney"
-                   type="text" class="example-right-align">
-            <span matSuffix>€</span>
-          </mat-form-field>
-        </div>
-        <div>
-          <button mat-flat-button color="accent" (click)="updateBetAndGenerateGrid()">Recalculer</button>
-        </div>
-        <div>
-          <button mat-flat-button color="primary" (click)="returnToFixtures()">Retour aux matchs</button>
-        </div>
+                <!-- Position Column -->
+                <ng-container matColumnDef="fixture">
+                  <th mat-header-cell *matHeaderCellDef> Match</th>
+                  <td mat-cell *matCellDef="let gridLine"> {{findFixtureName(gridLine.fixtureId)}} </td>
+                </ng-container>
+
+                <!-- Name Column -->
+                <ng-container matColumnDef="outcome">
+                  <th mat-header-cell *matHeaderCellDef> Résultat</th>
+                  <td mat-cell *matCellDef="let gridLine"> {{computeOutcomeName(gridLine.outcome)}} </td>
+                </ng-container>
+
+                <!-- Weight Column -->
+                <ng-container matColumnDef="odds">
+                  <th mat-header-cell *matHeaderCellDef> Côte</th>
+                  <td mat-cell *matCellDef="let gridLine"> {{displayDouble(gridLine.odds)}} </td>
+                </ng-container>
+
+                <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+              </table>
+            </div>
+            <div id="overview">
+              <mat-list>
+                <mat-list-item>
+                  <div mat-line>Côte totale</div>
+                  <div mat-line>{{displayDouble(getBetOverview(currentGrid).combinedOdds)}}</div>
+                </mat-list-item>
+                <mat-list-item>
+                  <div mat-line>Mise</div>
+                  <div mat-line>{{displayDouble(getBetOverview(currentGrid).moneyBet)}}€</div>
+                </mat-list-item>
+                <mat-list-item>
+                  <div mat-line>Gains potentiels</div>
+                  <div mat-line>{{displayDouble(getBetOverview(currentGrid).totalGain)}}€</div>
+                </mat-list-item>
+                <mat-list-item>
+                  <div mat-line>Combo booster {{getBetOverview(currentGrid).comboBoosterPercentage}}%</div>
+                  <div mat-line>{{displayDouble(getBetOverview(currentGrid).comboBoosterGain)}}€</div>
+                </mat-list-item>
+                <mat-list-item>
+                  <div mat-line>Gain total</div>
+                  <div mat-line>{{displayDouble(getBetOverview(currentGrid).totalGain)}}€</div>
+                </mat-list-item>
+                <mat-list-item>
+                  <div mat-line>
+                    <mat-paginator [length]="grids.combinedBetResult.playableGrids.length"
+                                   [pageSize]="1"
+                                   (page)="switchGrid($event)" [hidePageSize]="true">
+                    </mat-paginator>
+                  </div>
+                </mat-list-item>
+              </mat-list>
+
+            </div>
+          </mat-card-content>
+        </mat-card>
       </div>
-    </div>
-    <div class="grid-container">
-      <mat-slide-toggle [(ngModel)]="homogenousGains">Gains homogènes</mat-slide-toggle>
-      <mat-card class="example-card">
-        <mat-card-header>
-          <mat-card-title>
-            Grille {{pageIndex + 1}}
-          </mat-card-title>
-        </mat-card-header>
-        <mat-card-content>
-          <div id="grid">
-            <table mat-table [dataSource]="currentGrid.entries" class="mat-elevation-z8">
-
-              <!-- Position Column -->
-              <ng-container matColumnDef="fixture">
-                <th mat-header-cell *matHeaderCellDef> Match</th>
-                <td mat-cell *matCellDef="let gridLine"> {{findFixtureName(gridLine.fixtureId)}} </td>
-              </ng-container>
-
-              <!-- Name Column -->
-              <ng-container matColumnDef="outcome">
-                <th mat-header-cell *matHeaderCellDef> Résultat</th>
-                <td mat-cell *matCellDef="let gridLine"> {{computeOutcomeName(gridLine.outcome)}} </td>
-              </ng-container>
-
-              <!-- Weight Column -->
-              <ng-container matColumnDef="odds">
-                <th mat-header-cell *matHeaderCellDef> Côte</th>
-                <td mat-cell *matCellDef="let gridLine"> {{displayDouble(gridLine.odds)}} </td>
-              </ng-container>
-
-              <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-              <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-            </table>
-          </div>
-          <div id="overview">
-            <mat-chip-list>
-              <mat-chip>A miser : {{getBetOverview(currentGrid).moneyBet}}€</mat-chip>
-              <mat-chip>Gains: {{getBetOverview(currentGrid).totalGain}}€</mat-chip>
-              <mat-chip>Côtes cumulées: {{getBetOverview(currentGrid).combinedOdds}}</mat-chip>
-            </mat-chip-list>
-          </div>
-        </mat-card-content>
-        <mat-card-actions>
-          <mat-paginator [length]="grids.combinedBetResult.playableGrids.length"
-                         [pageSize]="1"
-                         (page)="switchGrid($event)">
-          </mat-paginator>
-        </mat-card-actions>
-      </mat-card>
-
-    </div>
   </div>
 </div>
 
